# dune-localfunctions

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt
cmake/modules/: CMakeLists.txt  DuneLocalfunctionsMacros.cmake
dune/localfunctions/: CMakeLists.txt  argyris.hh  arnoldwinther.hh  arnoldwinther.inc.hh  crouzeixraviart.hh  hermite.hh  lagrange.hh  morley.hh  polynomialbasiscoefficients.hh  restricted.hh  tensormatvec.hh
dune/localfunctions/basix/: CMakeLists.txt  basix.hh  globalbasix.hh  localbasix.hh  utility.hh
dune/localfunctions/common/: derivative.hh  virtualinterface.hh
dune/localfunctions/dualmortarbasis/: dualq1.hh
dune/localfunctions/lagrange/: CMakeLists.txt  cache.hh  equidistantpoints.hh  interpolation.hh  lagrangecoefficients.hh  lagrangecube.hh  lagrangepointset.hh  lagrangeprism.hh  lagrangepyramid.hh  lagrangesimplex.hh  lagrangesimplexold.hh
dune/localfunctions/meta/: product.hh
dune/localfunctions/monomial/: monomiallocalinterpolation.hh
dune/localfunctions/rannacherturek/: rannachertureklocalinterpolation.hh
dune/localfunctions/test/: CMakeLists.txt  argyriselementtest.cc  arnoldwintherelementtest.cc  basixtest.cc  c1_test-localfe.hh  dualmortarelementtest.cc  globalmonomialfunctionstest.cc  hermiteelementtest.cc  lagrangebenchmark.cc  lagrangeshapefunctiontest.cc  morleyelementtest.cc  raviartthomaselementtest.cc  test-edges0.5.cc  test-fe.hh  test-finiteelementcache.cc  test-hessian.cc  test-lagrange.cc  test-localfe.hh  test-nedelecsimplex.cc  test-orthonormal.cc  test-pk2d.cc  test-power-monomial.cc  test-product.cc  test-q1.cc  (+3 more)
(+45 files in other folders)
